fix: update some layout problems in Footer

--- a/src/layouts/Footer/index.css
+++ b/src/layouts/Footer/index.css
@@ -4,5 +4,5 @@
   left: 0;
   right: 0;
   background-color: #fbf8f0;
-  padding-top: 10vh;
+  padding-top: 3vh;
 }
